RESOLVED FIXED 160754
Can't style descendants in shadow tree using the :host pseudo class
https://bugs.webkit.org/show_bug.cgi?id=160754
Summary Can't style descendants in shadow tree using the :host pseudo class
Emmanuel
Reported 2016-08-10 15:01:37 PDT
Created attachment 285767 [details] Run in Safari TP I'd expect complex selectors such as: :host > div { ... } or :host(.foo) > div { ... } to work in a style inside a shadow root. Repro: http://jsbin.com/sinidob/edit?html,output Tested in Safari TP, Chrome stable works as expected.
Attachments
Run in Safari TP (1.45 KB, text/html)
2016-08-10 15:01 PDT, Emmanuel
no flags
patch (9.16 KB, patch)
2016-08-15 08:21 PDT, Antti Koivisto
no flags
Radar WebKit Bug Importer
Comment 1 2016-08-15 05:24:34 PDT
Antti Koivisto
Comment 2 2016-08-15 08:21:46 PDT
Created attachment 286054 [details] patch This enables :host(.foo) div { ... } but doesn't cover :host::after { ... } case.
Darin Adler
Comment 3 2016-08-20 19:45:17 PDT
Comment on attachment 286054 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=286054&action=review > Source/WebCore/css/SelectorChecker.cpp:1039 > + const Node* contextualReferenceNode = !checkingContext.scope ? element.document().documentElement() : checkingContext.scope; Maybe auto or auto* here?
WebKit Commit Bot
Comment 4 2016-08-22 10:21:11 PDT
Comment on attachment 286054 [details] patch Clearing flags on attachment: 286054 Committed r204724: <http://trac.webkit.org/changeset/204724>
WebKit Commit Bot
Comment 5 2016-08-22 10:21:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.