Can't style descendants in shadow tree using the :host pseudo class https://bugs.webkit.org/show_bug.cgi?id=160754

Reviewed by Darin Adler.

Source/WebCore:

"The :host pseudo-class, when evaluated in the context of a shadow tree, matches the shadow tree’s shadow host."

Currently :host() works for styling the host element itself (:host(.foo) { ... }). It should also be usable
for styling elements in the shadow tree:

    :host(.foo) div { ... }

Test: fast/shadow-dom/css-scoping-host-descendant.html

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::matchHostPseudoClass):
(WebCore::localContextForParent):

    Move to shadow host if we are matching :host and are at the root of the shadow tree.
    Set didMoveToShadowHost bit in the context.

(WebCore::SelectorChecker::matchRecursively):
(WebCore::SelectorChecker::checkOne):

    Call the existing matchHostPseudoClass to do :host matching if didMoveToShadowHost bit has been set.

* cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::addPseudoClassType):

    Disallow :host in the compiler (cases where it would match didn't reach the compiler before).

LayoutTests:

* fast/shadow-dom/css-scoping-host-descendant-expected.html: Added.
* fast/shadow-dom/css-scoping-host-descendant.html: Added.


Canonical link: https://commits.webkit.org/179186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204724 268f45cc-cd09-0410-ab3c-d52691b4dbfc